--- a/space-shooter_game/spaceshooter.html
+++ b/space-shooter_game/spaceshooter.html
@@ -55,7 +55,7 @@
     top: 0px;
     width: 40px;
     height: 40px;
-    background: url("alien.png");
+    background: url("rocket3.png");
     background-size: contain;
     background-repeat: no-repeat;
   }
